<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.features.authorization.CodeNotFoundActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/spacing_two_normal"
        android:layout_marginStart="@dimen/spacing_two_normal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/none_code"/>

        <TextView
            style="@style/Gray18CenteredMd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_huge"
            android:alpha="0.54"
            android:text="@string/code_not_found"/>

        <TextView
            style="@style/Gray16CenteredRg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:alpha="0.54"
            android:text="@string/leave_phone_number"/>

        <TextView
            android:id="@+id/activity_code_leave_number"
            style="@style/Blue14CenteredUpMd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:padding="@dimen/padding_normal"
            android:text="@string/leave_number"
            android:textAllCaps="true"/>

    </LinearLayout>

    <TextView
        android:id="@+id/activity_code_not_found_again"
        style="@style/White14CenteredUpMd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_two_normal"
        android:background="@drawable/background_azur_corners"
        android:foreground="?attr/selectableItemBackground"
        android:paddingBottom="@dimen/padding_little"
        android:paddingEnd="@dimen/padding_huge"
        android:paddingStart="@dimen/padding_huge"
        android:paddingTop="@dimen/padding_little"
        android:text="@string/check_again"
        android:textAllCaps="true"/>

</RelativeLayout>
