<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.livetyping.moydom.ui.activity.authorization.CameraPermissionActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/spacing_two_normal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/camera"/>

        <TextView
            style="@style/Gray18CenteredMd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_huge"
            android:alpha="0.54"
            android:text="@string/dont_have_permission_to_camera"/>

        <TextView
            style="@style/Gray16CenteredRg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.54"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:text="@string/please_need_request_to_camera_for_enter_app"/>

        <TextView
            android:id="@+id/activity_camera_permission_enable_access"
            style="@style/Blue14CenteredUpMd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:padding="@dimen/padding_normal"
            android:text="@string/enable_access"
            android:textAllCaps="true"/>

    </LinearLayout>

    <TextView
        android:id="@+id/activity_camera_permission_enter_manually"
        style="@style/White14CenteredUpMd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_two_normal"
        android:background="@drawable/background_azur_corners"
        android:paddingBottom="@dimen/padding_little"
        android:paddingEnd="@dimen/padding_two_normal"
        android:paddingStart="@dimen/padding_two_normal"
        android:paddingTop="@dimen/padding_little"
        android:text="@string/enter_code_manually"
        android:textAllCaps="true"/>

</RelativeLayout>
