<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/spacing_two_normal"
        android:layout_marginStart="@dimen/spacing_two_normal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/no_internet_connection"/>

        <TextView
            style="@style/Gray18CenteredMd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_huge"
            android:text="@string/no_internet_connection"/>

        <TextView
            style="@style/Gray16CenteredRg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:text="@string/check_internet_settings"/>

    </LinearLayout>

    <TextView
        android:id="@+id/fragment_dialog_no_internet_check_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_azur_corners"
        android:foreground="?attr/selectableItemBackground"
        android:paddingBottom="@dimen/padding_little"
        android:paddingEnd="@dimen/padding_huge"
        android:paddingStart="@dimen/padding_huge"
        style="@style/White14CenteredUpMd"
        android:layout_marginBottom="@dimen/spacing_two_normal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/padding_little"
        android:text="@string/check_again"
        android:textAllCaps="true"/>

</RelativeLayout>