<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1e000000"/>
    <RelativeLayout
        android:id="@+id/zone_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal">
        <View
            android:id="@+id/zone_color"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/energy_zone_violet_gradient"/>
        <TextView
            android:id="@+id/zone_title"
            style="@style/Gray16LeftRg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_tiny"
            android:layout_toEndOf="@id/zone_color"/>
        <TextView
            android:id="@+id/zone_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="4sp"
            android:textColor="#61000000"
            android:textSize="14sp"
            android:textStyle="normal"/>
        <LinearLayout
            android:id="@+id/zone_total_container"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/zone_title"
            android:layout_marginStart="@dimen/padding_tiny"
            android:layout_toEndOf="@+id/zone_color"
            android:orientation="vertical">
            <TextView
                style="@style/Gray14LeftMd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"/>
            <TextView
                android:id="@+id/zone_total_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="4sp"
                android:text="@string/rub_measure"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <com.livetyping.moydom.ui.custom.MultisizeTextView
                android:id="@+id/zone_total_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="4sp"
                android:text="@string/energy_measure"
                android:textSize="16sp"
                android:textStyle="normal"
                app:firstPartTextSize="16sp"
                app:secondPartTextSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/zone_average_container"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/zone_title"
            android:layout_marginStart="@dimen/padding_tiny"
            android:layout_toEndOf="@+id/zone_total_container"
            android:orientation="vertical">
            <TextView
                style="@style/Gray14LeftMd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average"/>
            <TextView
                android:id="@+id/zone_average_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="4sp"
                android:text="@string/rub_measure"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <com.livetyping.moydom.ui.custom.MultisizeTextView
                android:id="@+id/zone_average_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="4sp"
                android:text="@string/energy_measure"
                android:textSize="16sp"
                android:textStyle="normal"
                app:firstPartTextSize="16sp"
                app:secondPartTextSize="12sp"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>